--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE htlm>
 <htlm lang="ja">
     <head>
-        <title>えあぷれのあそびば</title>
+        <title>自己紹介</title>
         <link ret="stylesheet" type="text/css" href="vlog.css">
         
     </head>
